# OmniVoice

./: .coverage  .gitignore  AGENTS.md  README.md  check-env.bat  plan.md  pyproject.toml  spec.md  start.bat
app/: __init__.py  config.py  main.py
app/components/: audio_player.py  text_stats.py  theme_toggle.py  voice_selector.py
app/core/: __init__.py  audio_utils.py  edge_tts_engine.py  gtts_engine.py  omnivoice_engine.py  tts_engine.py
app/i18n/: __init__.py  en.py  ja.py  ko.py  translations.py  zh_cn.py  zh_tw.py
app/models/: history.py  tts_request.py
app/pages/: about_page.py  batch_page.py  history_page.py  settings_page.py  ssml_page.py  tts_page.py  voice_clone_page.py
scripts/: check-env.ps1  start-app.ps1
tests/: __init__.py  test_audio_utils.py  test_i18n.py  test_models.py  test_storage.py  test_tts_engine.py
