[project]
name = "omnivoice-tts"
version = "1.0.0"
description = "OmniVoice TTS App — 多引擎多國語系文字轉語音應用"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "OmniVoice Team", email = "luckyegg168@gmail.com"}]

dependencies = [
    "nicegui>=2.0",
    "edge-tts>=6.1",
    "gTTS>=2.5",
    "pydantic>=2.0",
    "aiofiles>=23.0",
    "mutagen>=1.47",
]

[project.optional-dependencies]
omnivoice = [
    "omnivoice>=0.1.3",
    "torch>=2.0",
    "torchaudio>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pytest-cov>=5.0",
]

[project.scripts]
omnivoice-app = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
